--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body {
   font-size: 14px;
   line-height: 1.5em;
   font-weight: 400;
+  background: url('background.jpeg');
 }
 
 p, span, a, ul, li, button {
@@ -20,6 +21,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
   line-height: 1.5em;
   font-weight: 300;
+  color: white;
 }
 
 strong {
@@ -33,6 +35,7 @@ strong {
   background: #fff;
   padding: 20px;
   margin-bottom: 30px;
+  border-radius: 10px;
 }
 .tile .title {
   margin-top: 0px;
