--- a/Sports/style1.css
+++ b/Sports/style1.css
@@ -10,18 +10,37 @@ header{
 .wrapper{
 	height:100%;
 }
- .container-wrapper{
- 	background-color:#fff;
-	padding:0 30px;
- }
 
 #login-button{
 	padding-top:15px;
 }
 
+
+#dd1 {
+	margin-left: 25px;
+}
+#dd2 {
+	margin-left: 1px;
+}
+#dd3 {
+	margin-left: 14px;
+}
+#dd4 {
+	margin-left: 27px;
+}
+#dd5 {
+	margin-left: 1px;
+}
+#dd6 {
+	margin-left: 22px;
+}
+help-block{
+	
+}
+
 footer{ 
-  position:fixed;
-  z-index:100;
+
+  z-index:99;
   bottom:0;
   left:0;
   right:0;
@@ -35,3 +54,167 @@ footer{
    display:block;
    margin:5px 0 !important;
   } 
+  
+ #login 
+ { 
+ position: relative; 
+ right: -1000px; 
+ top:-40px; 
+ } 
+ 
+ #sign{ 
+ background-color: #4CAF50; 
+ border: none; 
+ color: white; 
+ padding: 10px 20px; 
+ text-align: center; 
+ text-decoration: none; 
+ display: inline-block; 
+ font-size: 16px; 
+ margin: 4px 2px; 
+ cursor: pointer; 
+ } 
+ 
+ #sport{ 
+ width: 200px; 
+ height: 130px; 
+ background-color: #4C535; 
+ border: none; 
+ color: white; 
+ text-align: center; 
+ text-decoration: none; 
+ display: inline-block; 
+ font-size: 16px; 
+ margin: 70px 70px; 
+ cursor: pointer; 
+ border-radius: 12px; 
+ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
+ } 
+ 
+  #sport:hover { 
+ background-color: #000;
+ color: white; 
+ }
+ 
+ input[type=text1], input[type=password1] {
+    width: 250px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+ button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+}
+
+img.avatar {
+    width: 40%;
+    border-radius: 50%;
+}
+.container-here{
+	padding: 16px;
+Width: 390px;
+padding-bottom: 20px;
+	
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 400px; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+}
+    
+@keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+}
+
+  
+  
+  
+  
+  
