--- a/Sports/css/sport_style.css
+++ b/Sports/css/sport_style.css
@@ -11,24 +11,25 @@ table {
       font-size: 17px;
     }
 
-    table td {
+    /*table td {
       transition: all .5s;
-    }
+    }*/
     
     /* Table */
     .data-table {
       border-collapse: collapse;
-      font-size: 14px;
+      font-size: 12px;
       min-width: 537px;
     }
 
     .data-table th, 
     .data-table td {
       border: 1px solid #e1edff;
-      padding: 7px 17px;
+      padding: 7px 12px !important;
     }
     .data-table caption {
       margin: 7px;
+    display: none;
     }
 
     /* Table Header */
@@ -52,12 +53,13 @@ table {
     .data-table tbody td {
       text-align: center;
     }
-    .data-table tbody tr:nth-child(odd) td {
+    /*.data-table tbody tr:nth-child(odd) td {
       background-color: #f4fbff;
-    }
+    }*/
     .data-table tbody tr:hover td {
-      background-color: #ffffa2;
-      border-color: #ffff0f;
+      background-color: #eaf1f7;
+	cursor:default;
+	
     }
 
     
@@ -83,3 +85,119 @@ table {
     .sportHeading {
       font-size: 37px;
     }
+
+
+/******Abinash Changes********/
+.container-wrapper{
+	padding:0 30px;
+}
+.sportHeading{
+    /*background-color: #286293; */
+    padding: 10px;
+    /*color: #286293;*/
+    /* box-shadow: 1px 2px 4px 1px #ccc; */
+    margin-top: 0;
+
+}
+.dataTables_filter{
+	margin-bottom:8px;
+}
+
+#myTable_wrapper label{
+	font-weight: 400 !important;
+    margin-bottom: 0;
+    vertical-align: middle;
+}
+table.dataTable.no-footer{
+	border-bottom:none;
+}
+.tableHeader{
+background-color:#70a1cc;
+color:#fff;
+}
+
+table.dataTable#myTable thead th,
+table.dataTable#myTable tbody td{
+	padding: 6px 10px!important;
+    border: 1px solid #dbdbdb;
+}
+.initiateBlock{
+	padding:8px 12px;
+	background-color:#fff;
+	box-shadow:1px 1px 1px 1px #ccc;
+	margin: 15px 0;
+
+}
+.initiateBlock p{
+	display: inline-block;
+    	vertical-align: middle;
+    	margin-bottom: 0;
+	font-size: 15px;
+    	font-weight: 600;
+    	padding-top: 5px;
+}
+
+.initiateBlock button{
+	padding:5px 8px!important;
+	margin-left:30px;
+	margin-top: 0;
+}
+
+table.dataTable#myTable tbody tr.odd{
+	background-color:#ffffff;
+}
+table.dataTable#myTable tbody tr.even{
+	background-color:#f2f2f2;
+}
+table.dataTable thead th{
+	position:relative;
+}
+
+table.dataTable thead .sorting_desc:after {
+    content: "\f0dd";
+	font-family:"Fontawesome";
+    position: absolute;
+    color: #fff;
+    right: 5px;
+}
+table.dataTable thead .sorting_asc:after {
+content: "\f0de";
+font-family:"Fontawesome";
+    position: absolute;
+    color: #fff;
+    right: 5px;
+}
+table.dataTable thead .sorting:after {
+content: "\f0dc";
+font-family:"Fontawesome";
+    position: absolute;
+    color: #fff;
+    right: 5px;
+
+}
+
+table.dataTable thead .sorting,
+table.dataTable thead .sorting_desc,
+table.dataTable thead .sorting_asc {
+    background-image: none !important;
+}
+
+.dataTables_length select,
+.dataTables_filter input{
+padding: 4px 10px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.dataTables_length select{
+	padding:4px;
+}
